# release-drafter-experimentation

./: .gitignore  input.md  release-drafter-experimentation.cabal  release-notes-postprocessor
.github/: release-drafter.yml
.github/workflows/: postprocess-releases.yml  release-drafter.yml
app/: Main.hs
data/: categories.md  category.md  out.md
