cabal-version: 3.14
name: release-drafter-experimentation
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Julian Bruder
maintainer: julian.bruder@outlook.com
category: Development
build-type: Simple

common warnings
  ghc-options: -Wall

executable release-notes-postprocessor
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.20.0.0
    , attoparsec ^>=0.14.4
    , text
    , containers
    , lens

  hs-source-dirs: app
  default-language: GHC2024
